--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,24 @@
   --background-start-rgb: 245, 245, 245;
   --background-end-rgb: 255, 255, 255;
 }
+@keyframes dynamic {
+  0% {
+    width: 24rem;
+    height: 30px;
+  }
+  100% {
+    height: 10rem;
+  }
+}
+@keyframes dynamicReverse {
+  0% {
+    height: 10rem;
+    width: 24rem;
+  }
+  100% {
+    height: 30px;
+  }
+}
 
 body,
 html {
@@ -28,18 +46,33 @@ html {
 .dynamic-search {
   height: 30px;
   width: 24rem;
-  transition: 0.3s ease-out;
+  /* transition: 0.3s ease-out; */
+  animation: dynamic 0.5s forwards;
+}
+.dynamic-search-reverse {
+  height: 30px;
+  width: 24rem;
+  animation: dynamicReverse 0.5s forwards;
 }
 
-.dynamic-search:active {
+/* .dynamic-search {
   height: 10rem;
   width: 20rem;
-}
+} */
 .custom-z-index {
   z-index: 500;
 }
-.custom-z-index-greater {
+
+.custom-z-index-great {
   z-index: 600;
+}
+
+.custom-z-index-greater {
+  z-index: 700;
+}
+
+.custom-z-index-greatest {
+  z-index: 800;
 }
 
 @media (prefers-color-scheme: dark) {
